pavis13-dbs: more reviews integrated, added coverletter
git-svn-id: https://scivis.itn.liu.se/svn/publications/workinprogress/pavis13-dbs@4173 cd0c9ba3-fe29-0410-b0c2-9a6eeba77867

--- a/pavis13-dbs.tex
+++ b/pavis13-dbs.tex
@@ -108,10 +108,13 @@ Deep Brain Stimulation (DBS) is a well-established procedure for reducing the sy
 % Depending on the electrodes location along the access path either temporary memory-loss, speech problems or a tremor increase can occur.
 %
 %In addition to the increased precision and in contrast to x-ray scanning, this method does not use any ionizing radiation which should be, especially in the brain, avoided at all costs. While x-ray scans might still be performed after the surgery as a final check, MER has the potential to reduce the need for intra-operative scans. Only by combining MER data with the structural information acquired through MRI, the neurosurgeon is able to plan and perform all necessary steps during the DBS intervention. Furthermore, intra-operative patient checks do also not become obsolete, as their results allow to draw direct conclusions about the influence of the placed electrode. 
-%
+
 In recent years, Microelectrode Recording (MER) has emerged as an additional technique allowing the surgeon to better locate the target region for DBS intra-operatively~\cite{Lenz1988}. MER measures the electrical field of the brain during the surgery by inserting electrodes into the access path. The measured information is presented to the surgical staff by showing the amplitude in the time domain for each electrode, from which the expert differentiates functional regions of the brain. In order to allow for an intuitive and accurate placement of the electrodes, it is important that the surgeon has access to all these modalities in a unified manner.
 
-Within this paper we propose an interactive visualization system to support the surgeon during a DBS placement procedure. From the surgeons point of view, it is most important to create a comprehensive system supporting the decision-making about the optimal placement location for the emitting electrode to allow for a higher accuracy and precision. On the one hand, this is done by fusing the different modalities to increase the surgeon's mental registration between these. On the other hand, by combining the uncertainties and enabling access to this in a quantitative way, we can increase the surgeon's confidence in the gathered data. We address these technical objectives in the following ways: We provide two views enhancing the final placement of the electrode. These views combine the information about the target region gathered from different sources, i.\,e. pre-operative scans, x-ray scans, MER, patient checks, and present them to the surgeon in order to guide him to the optimal placement location. One of the views fuses this data with the structural information surrounding the intended target region in a multimodal visualization. This enables a mental registration of the measured data to the imaging modalities and, thereby, provides context that the surgeon can draw upon during the placement decision. The other provides an information visualization approach to present the data in a quantitative way. The original data and derived information is presented as profile plots allowing the surgeon to see the optimal placement position in one glance and, thus, enable a more effective placement of the electrode.
+Within this paper we propose an interactive visualization system to support the surgeon during a DBS placement procedure. From the surgeons point of view, it is most important to create a comprehensive system supporting the decision-making about the optimal placement location for the emitting electrode to allow for a higher accuracy and precision. The system should increase the surgeon's mental registration between the different modalities and combine the uncertainties in a quantitative way so that we can increase his confidence in the collected data.% We address these technical objectives by introducing two separate fusion techniques. One, we provide two views enhancing the final placement of the electrode by fusing 
+%
+%On the one hand, this is done by fusing the different modalities to increase the surgeon's mental registration between these. On the other hand, by combining the uncertainties and enabling access to this in a quantitative way, we can increase the surgeon's confidence in the gathered data. 
+We address these technical objectives in the following ways: We provide two views enhancing the final placement of the electrode. These views employ two separate fusion techniques. One, we combine the structural and functional information about the target region gathered from different sources, i.\,e. pre-operative scans, x-ray scans, MER, patient checks, and present them to the surgeon in order to guide him to the optimal placement location. The view fuses this data with the structural information surrounding the intended target region in a multimodal visualization. This enables a mental registration of the measured data to the imaging modalities and, thereby, provides context that the surgeon can draw upon during the placement decision. Two, we fuse the information about the occurring uncertainty and provide an information visualization approach to present the data in a quantitative way. The original data and derived information is presented as profile plots allowing the surgeon to see the optimal placement position in one glance and, thus, enable a more effective placement of the electrode.
 
 %Within this paper we propose an interactive visualization system to support the DBS placement procedure by combining the values and uncertainties of these different measurements, whereby the combined information is used to guide the surgeon to the optimal placement location. To this end, we provide two views enhancing the final placement of the electrode. These views combine the information about the target region gathered from different sources, i.\,e. pre-operative scans, x-ray scans, MER, patient checks, and present them to the surgeon. One of the views fuses this data with the structural information surrounding the intended target region in a multimodal visualization. This enables a mental registration of the measured data to the imaging modalities and, thereby, provides context that the surgeon can draw upon during the placement decision. The other provides an information visualization approach to present the data in a quantitative way.
 
@@ -156,12 +159,24 @@ In the area of MER data integration, Miocinovic et al. provide a system for a gu
 %
 
 \section{System Overview}\label{sec:overview}
-%\begin{figure*}[t]
-%    \centering
-%    \includegraphics[width=0.9\linewidth]{figures/workflow}
-%    \caption{The workflow of the proposed visual DBS intervention system can be divided into three phases: planning, recording and placement. To support each of these phases, we employ dedicated views which are arranged in a multiple view setup. External components interacting with our visualization system are shown for each phase.}
-%    \label{fig:workflow}
-%\end{figure*}
+\begin{figure*}[t]
+    \centering
+    \includegraphics[width=0.8\linewidth]{figures/workflow}
+    \caption{The workflow of the proposed visual DBS intervention system can be divided into three phases: planning, recording and placement. To support each of these phases, we employ dedicated views which are arranged in a multiple view setup. External components interacting with our visualization system are shown for each phase.}
+    \label{fig:workflow}
+\end{figure*}
+
+\begin{figure}[t]
+  \centering
+  \begin{minipage}[b]{0.45\columnwidth}
+  \subfigure{\includegraphics[width=\columnwidth]{figures/screenshot-planning.jpg}}\\
+  \vspace*{-0.02cm}
+  \subfigure{\includegraphics[width=\columnwidth]{figures/screenshot-target.jpg}}
+  \end{minipage}
+  \subfigure{\includegraphics[width=0.5\columnwidth]{figures/screenshot-recording.jpg}}
+  \caption{Screenshots of our system during the three phases as described in Section~\ref{sec:overview:procedure}. The planning phase (Section~\ref{sec:overview:planning} in the top left, recording phase (Section~\ref{sec:overview:recording}) on the right, and the placement phase (Section~\ref{sec:overview:placement}) on the lower left.}
+  \label{fig:screenshot}
+\end{figure}
 
 %Different MER setups exist for measuring the electric fields. The system we used to record the data in this paper contains five electrodes with a square geometry in which the sides measure $1.5$mm and the fifth electrode is located in the center.
 
@@ -175,7 +190,7 @@ The second method, through which we support the electrode placement, is to prese
 %MER is an intra-operative technique to gain information about functional areas of the brain. This information is gathered by inserting electrodes that measure the electric field properties created by the discharge of individual neurons in the surrounding tissue~\cite{McIntyre2006}. In the human brain there are a number of different types of neurons, which each have a distinct discharge behavior. The combination of those types leads to detectable discharge patterns that can be used to identify the region in which the measurement electrodes are located. Figure~\ref{fig:dischargepatterns} shows examples of the signals acquired from different brain regions. One possibility to distinguish the regions is to analyze the frequency of spikes within these signals. Usually this information is presented to the surgeon the raw  audio signal, an oscillogram, and as the result of a simple frequency analysis, e.\,g. a power density function.
 
 \subsection{DBS Intervention Procedure}\label{sec:overview:procedure}
-Before proposing our system, we will first give a high-level overview of the DBS intervention procedure as it is specified in surgery guidelines~\cite{Hemm2010}. With respect to the steps in this procedure, a DBS intervention can be roughly divided into three subsequent phases: \emph{planning}, in which the intended target region is selected, \emph{recording}, in which the MER signal is obtained, and \emph{placement}, in which the emitting electrode is inserted, the patient checks are performed, and the placement is evaluated. %As these three phases define the overall workflow of a DBS intervention, they are used as the blueprint for the workflow underlying the presented system (see Figure~\ref{fig:workflow}).
+Before proposing our system, we will first give a high-level overview of the DBS intervention procedure as it is specified in surgery guidelines~\cite{Hemm2010}. With respect to the steps in this procedure, a DBS intervention can be roughly divided into three subsequent phases: \emph{planning}, in which the intended target region is selected, \emph{recording}, in which the MER signal is obtained, and \emph{placement}, in which the emitting electrode is inserted, the patient checks are performed, and the placement is evaluated (see also Figure~\ref{fig:workspace}). %As these three phases define the overall workflow of a DBS intervention, they are used as the blueprint for the workflow underlying the presented system (see Figure~\ref{fig:workflow}).
 %
 %\begin{itemize}
 %\item \textbf{Planning phase.} During this phase, the surgeon selects the intended target region and determines an optimal trajectory to access that region. We will describe how this phase is supported by the proposed system within Section~\ref{sec:overview:planning}.
@@ -223,7 +238,7 @@ The goal of the planning phase is to identify the desired target region based on
 
 \subsubsection{Contextual View}\label{sec:overview:planning:3d}
 The contextual view is the common element that is present in all three phases of our system. %This constant presence is useful as it creates a \emph{horizontal mental registration} between the different phases in addition to the \emph{vertical mental registration} present within each phase. %The latter is achieved by using this view as a frame of reference so that the individual information of the other views can be related to the common contextual view.
-It is based on a multimodal visualization of the pre-operatively acquired CT and MRI scans. To improve spatial comprehension, the three modalities are not fused but vertically separated such that, for each layer, the modality of highest interest is visible (see Figure~\ref{fig:recordingphase:3d}). At the lowest layer we render the T$_1$-weighted MRI with a transfer function that shows the whole head of the patient. The spin-lattice time was chosen since it allows for an easier classification of the skin and the relatively stable gradients allow for reasonable shading. This part communicates the orientation of the patient intuitively and thereby reduces dangerous left-right mismatches by the surgical staff. The cut-off line between this layer and the next can be interactively moved by the user to enable data inspection. The lower layer is capped with a slice view that provides the surgeon with direct access to structural information embedded within the spatial context. The skull is partly visualized in the middle layer, based on the CT scan, to serve as a smooth transition between the lower layer and the brain. To obtain an occlusion-free view to the brain we employ a skull stripping approach, described in Section~\ref{sec:implementation}, at the highest layer. As MRI has a low signal-to-noise ratio, gradient-based shading is not viable when visualizing the brain. Instead, we employ depth darkening~\cite{Luft2005}, which increases the depth perception of the brain's structures. The depth of the intended target region is visible as a yellow band surrounding the skull and serves as another depth cue.
+It is based on a multimodal visualization of the pre-operatively acquired CT and MRI scans. To improve spatial comprehension, the three modalities are not fused but vertically separated such that, for each layer, the modality of highest interest is visible (see Figure~\ref{fig:recordingphase:3d}). At the lowest layer we render the T$_1$-weighted MRI with a transfer function that shows the whole head of the patient. The spin-lattice time was chosen since it allows for an easier classification of the skin and the relatively stable gradients allow for reasonable shading. This part communicates the orientation of the patient intuitively and thereby reduces dangerous left-right mismatches by the surgical staff. The cut-off line between this layer and the next can be interactively moved by the user to enable data inspection. The lower layer is capped with a slice view that provides the surgeon with direct access to structural information embedded within the spatial context. The skull is partly visualized in the middle layer, based on the CT scan, to serve as a smooth transition between the lower layer and the brain. To obtain an occlusion-free view to the brain we employ a skull stripping approach, described in Section~\ref{sec:implementation}, at the highest layer. As MRI has a fairly low signal-to-noise ratio~\cite{Herrmann11}, we decided to employ depth darkening~\cite{Luft2005} instead of gradient-based shading as it increases the depth perception of the brain's structures. The depth of the intended target region is visible as a yellow band surrounding the skull and serves as another depth cue.
 
 We present the access path to the surgeon by removing the structures around the previously determined trajectory~\cite{Weiskopf2002,Rieder2008}. The removed area is cylinder-shaped and possesses a variable, user-defined radius so that the surgeon can inspect the walls of cylinders with varying radii. To increase the amount of information the surgeon gains from the cylinder walls, the same transfer function as used in the slice representations is applied here. More importantly, this increased access path allows more information to be shown, and remain visible, in a spatial context. As described in the next section, we can include glyphs into the removed area to provide information about attributes along the trajectory.
 %
@@ -291,7 +306,7 @@ To facilitate linking between all views containing a representation of the MER s
 \begin{figure}[t]
     \centering
     \fbox{\includegraphics[width=\columnwidth, height=0.5\columnwidth]{figures/recording-3dsound}}
-    \caption{Fusing the spatial orientation and layout of the recording electrodes with the temporal signal relieves the surgeon of the burden to keep this association in mind. To enhance the perception of the spikes, only the values above a certain threshold are shown in this view so that they are visible pre-attentively. The picture shows the same signal for subsequent time steps. The inset shows the result for one electrode without thresholding.}
+    \caption{Combining the spatial orientation and layout of the recording electrodes with the temporal signal relieves the surgeon of the burden to keep this association in mind. To enhance the perception of the spikes, only the values above a certain threshold are shown in this view so that they are visible pre-attentively. The picture shows the same signal for subsequent time steps. The inset shows the result for one electrode without thresholding.}
     \label{fig:recordingphase:3dsound}
 \end{figure}
 
