--- a/literature.bib
+++ b/literature.bib
@@ -2,12 +2,23 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Alexander Bock at 2012-09-25 17:08:42 +0200 
+%% Created for Alexander Bock at 2012-11-26 13:53:11 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Herrmann11,
+	Author = {Herrmann, KH and Schmidt, S and Kretz, A and Haenold, R and Krumbein, I and Metzler, M and Gaser, C and Witte, OW and Reichenbach, JR},
+	Date-Added = {2012-11-26 12:50:50 +0000},
+	Date-Modified = {2012-11-26 12:53:11 +0000},
+	Journal = {Magnetic Resonance Materials in Physics, Biology and Medicine},
+	Number = {3},
+	Pages = {233--244},
+	Title = {Possibilities and limitations for high resolution small animal MRI on a clinical whole-body 3T scanner},
+	Volume = {25},
+	Year = {2012}}
 
 @article{Djurcilov2002239,
 	Author = {Suzana Djurcilov and Kwansik Kim and Pierre Lermusiaux and Alex Pang},
